# device-connector-template

./: Cargo.toml  Dockerfile  LICENSE  README.md  conf.yml
src/: example_plugin.c  hello.rs  hexdump.rs  lib.rs  main.rs
