[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[lib]
name = "dc_{{crate_name}}"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "{{project-name}}-run"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_with = "3.4.0"
bytes = "1.5.0"
clap = { version = "4.3.24", features = ["derive"] }
log = "0.4.20"
env_logger = "0.9.3"
device-connector = { git = "https://github.com/aptpod/device-connector-framework.git", tag = "v2.1.0" }

[profile.release]
panic = "abort"
