[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[lib]
name = "dc_{{crate_name}}"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.195", features = ["derive"] }
dc-core = { git = "https://github.com/aptpod/device-connector-framework.git", tag = "v3.0.0", features = ["log-0_4"] }
